Fixed various problems in Android port (#328)
- ArrayList => ArrayList<Integer>
- Removed deprecated and useless SURFACE_TYPE_GPU
- Disabled backup
- Using valueOf instead of ctors
- Moved allocation out of draw code
- HashMap => SparseIntArray
- Avoid using default Locale
- Added missing 'public' qualifiers
- Added TargetApi annotation
- Removed useless namespace declarations